upgrade to gulp v4

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "gulp",
     "dev": "gulp dev",
     "build": "NODE_ENV=production gulp build",
-    "build:pardot": "npm run build -- --imagesDir=https://www.middlebury.edu/institute/themes/custom/institute_theme/images/ && gulp replace:imageurls --imagesDir=https://www.middlebury.edu/institute/themes/custom/institute_theme/images/",
-    "build:icons": "gulp icons && gulp copy:icons",
+    "build:pardot": "npm run build -- --imagesDir=https://www.middlebury.edu/institute/themes/custom/institute_theme/images/ && gulp replaceImagePaths --imagesDir=https://www.middlebury.edu/institute/themes/custom/institute_theme/images/",
+    "build:icons": "gulp buildIcons",
     "now-build": "npm run build && mv dist public",
     "deploy": "gulp deploy",
     "format": "prettier --config ./.prettierrc --write \"src/**/*.{js,scss}\"",
@@ -33,11 +33,11 @@
     "dotenv": "^8.0.0",
     "eslint": "^6.0.1",
     "eslint-config-drupal": "^4.0.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-combine-mq": "^0.4.0",
     "gulp-data": "^1.3.1",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
