--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-svg-sprites": "^4.1.2",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-twig": "^1.2.0",
     "js-yaml": "^3.13.1",
     "postcss-url": "^8.0.0",
