update travis task name to match renamed gulp task

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
   - 10.16.0
 script:
   - npm run build
-  - gulp replace:imageurls --imagesDir="/institute/themes/custom/institute_theme/images/"
+  - gulp replaceImagePaths --imagesDir="/institute/themes/custom/institute_theme/images/"
 
 # auto deploy dist folder to github branch so frontend deploys can git pull assets instead of rebuilding.
 # See #159
