--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-react-jsx": "^7.7.0",
     "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^9.6.0",
     "beeper": "^2.0.0",
@@ -63,7 +64,7 @@
     "yargs": "^13.2.4"
   },
   "dependencies": {
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.9.2",
     "countup.js": "^2.0.4",
     "intersection-observer": "^0.5.0",
     "mdn-polyfills": "^5.18.0",
@@ -71,6 +72,7 @@
     "normalize.css": "^5.0.0",
     "object-fit-images": "^3.2.3",
     "pikaday": "^1.7.0",
+    "preact": "^10.0.4",
     "swiper": "^4.1.0"
   },
   "resolutions": {
