--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "autoprefixer": "^9.6.0",
     "beeper": "^2.0.0",
     "browser-sync": "^2.26.7",
+    "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^4.1.1",
     "dotenv": "^8.0.0",
     "eslint": "^6.0.1",
     "eslint-config-drupal": "^4.0.1",
     "gulp": "^4.0.2",
-    "gulp-combine-mq": "^0.4.0",
     "gulp-data": "^1.3.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^5.0.3",
@@ -61,6 +61,7 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sizes": "^0.5.1",
     "rollup-plugin-uglify": "^6.0.0",
+    "sort-css-media-queries": "^1.5.0",
     "yargs": "^13.2.4"
   },
   "dependencies": {
