--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-transform-react-jsx": "^7.7.0",
     "@babel/preset-env": "^7.4.5",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
     "autoprefixer": "^9.6.0",
     "beeper": "^2.0.0",
     "browser-sync": "^2.26.7",
@@ -53,14 +55,11 @@
     "js-yaml": "^3.13.1",
     "postcss-url": "^8.0.0",
     "prettier": "^1.18.2",
-    "rollup": "^0.67.0",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-filesize": "^6.0.1",
-    "rollup-plugin-ignore": "^1.0.4",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-sizes": "^0.5.1",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup": "^1.29.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-sizes": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "sort-css-media-queries": "^1.5.0",
     "yargs": "^13.2.4"
   },
