--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "intersection-observer": "^0.5.0",
     "mdn-polyfills": "^5.18.0",
     "micromodal": "git+https://git@github.com/zebapy/micromodal.git",
+    "nodelist-foreach-polyfill": "^1.2.0",
     "normalize.css": "^5.0.0",
     "object-fit-images": "^3.2.3",
     "pikaday": "^1.7.0",
